@@ -7,6 +7,7 @@ Changes
   - Added support for server weights.
   - Added support for Cache::Memcached::Fast style hashref server specification.
   - Added $keys parameter to stats()
+  - Added server_versions() method for Cache::Memcached::Fast compatibility.
   - Removed malloc, sizes, and self from default stats()
   - Require Memcached::libmemcached 0.4403
   - Warn if namespace > 128 bytes (to allow future optimization).
